# docs/swagger.yaml
@@ -88,7 +88,7 @@ definitions:
       result:
         type: string
     type: object
-host: localhost:3333
+host: 127.0.0.1:3333
 info:
   contact:
     email: support@swagger.io
@@ -102,18 +102,24 @@ info:
   title: Swagger Jameson API
   version: "1.0"
 paths:
-  /api/v1/project/create:
-    post:
+  /container/{container}:
+    get:
       consumes:
       - application/json
-      operationId: creat_project
+      operationId: set container by id
+      parameters:
+      - description: container_id
+        in: path
+        name: container
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Project'
+            $ref: '#/definitions/model.TestContainer'
         "404":
           description: Not Found
           schema:
@@ -126,7 +132,7 @@ paths:
           description: Internal Server Error
           schema:
             type: string
-      summary: create project
+      summary: container by id
   /container/{container}/add/voidzone:
     post:
       consumes:
@@ -413,6 +419,31 @@ paths:
           schema:
             type: string
       summary: create new test container
+  /project/create:
+    post:
+      consumes:
+      - application/json
+      operationId: creat_project
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Project'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.errorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/model.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: create project
   /projects:
     get:
       consumes:
